--- a/style/style.scss
+++ b/style/style.scss
@@ -6,7 +6,6 @@ body {
     align-items: center;
     background-color:rgb(177, 163, 163);
   }
-  
   #btn{
     padding: 20px 40px;
     font-size: 30px;
@@ -14,4 +13,10 @@ body {
     color: white;
     border-radius: 5px;
     border: none;
+
+    &:hover{
+      background-color: aliceblue;
+      color: black;
+      transition: 0.6s;
+    }
   }
